<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sales">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="50dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_store_black_24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/call"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sub"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:textSize="16sp"
            android:paddingBottom="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start"
            android:textSize="18sp"
            android:paddingRight="40dp"
            android:paddingLeft="40dp"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:background="@color/colorPrimary"
            android:textColor="?android:attr/windowBackground"/>

    </LinearLayout>


</FrameLayout>